--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,32 @@
-asttokens==2.4.1
-blessed==1.20.0
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-comm==0.2.2
-debugpy==1.8.5
-decorator==5.1.1
-docker-pycreds==0.4.0
 einops==0.8.0
-exceptiongroup==1.2.2
-executing==2.0.1
 filelock==3.13.1
 fsspec==2024.2.0
-ftfy==6.2.0
-gitdb==4.0.11
-GitPython==3.1.43
-gpustat==1.1.1
-idna==3.7
-ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
 MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
 mpmath==1.3.0
-nest-asyncio==1.6.0
 networkx==3.2.1
-numpy==1.26.4
-nvidia-ml-py==12.555.43
-packaging==24.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-protobuf==5.27.3
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py==1.11.0
-Pygments==2.18.0
-PyYAML==6.0.1
-pyzmq==26.2.0
-regex==2024.7.24
-requests==2.32.3
-scikit-learn==1.5.1
-scipy==1.14.0
-sentry-sdk==2.12.0
-setproctitle==1.3.3
-six==1.16.0
-smmap==5.0.1
-stack-data==0.6.3
+numpy==1.26.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.1.105
+nvidia-nvtx-cu12==12.1.105
+pillow==10.2.0
+scikit-learn==1.5.2
+scipy==1.14.1
 sympy==1.12
 threadpoolctl==3.5.0
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-triton==2.1.0
-typing_extensions==4.12.2
-urllib3==2.2.2
-wandb==0.17.5
-wcwidth==0.2.13
+torch==2.2.1+cu121
+torchaudio==2.2.1+cu121
+torchvision==0.17.1+cu121
+tqdm==4.66.5
+triton==2.2.0
+typing_extensions==4.9.0
